@@ -1,0 +1,56 @@
+<refentry xmlns="http://docbook.org/ns/docbook" version="5.0" xml:id="who">
+
+  <refmeta>
+    <refentrytitle>PS</refentrytitle>
+    <manvolnum>nged</manvolnum>
+    <refmiscinfo class="source">BRL-CAD</refmiscinfo>
+    <refmiscinfo class="manual">BRL-CAD MGED Commands</refmiscinfo>
+  </refmeta>
+
+  <refnamediv xml:id="name">
+    <refname>ps</refname>
+    <refpurpose>List currently running subprocesses.</refpurpose>
+  </refnamediv>
+
+  <!-- body begins here -->
+  <refsynopsisdiv xml:id="synopsis">
+    <cmdsynopsis sepchar=" ">
+      <command>ps</command>
+    </cmdsynopsis>
+  </refsynopsisdiv>
+
+  <refsection xml:id="description"><title>DESCRIPTION</title>
+    <para>
+      List currently running sub-processes (typically these will be some form of
+      asynchronously launched <command>rt</command> render.)
+    </para>
+  </refsection>
+
+  <refsection xml:id="examples"><title>EXAMPLES</title>
+
+  <example><title>List Currently Running Processes</title>
+    <para>
+      <prompt>mged&gt; </prompt><userinput>ps</userinput>
+      <literallayout class="normal">
+    PID CMD
+5524692 rt -M -u model /home/user/test.g
+6515118 rtcheck -M /home/user/test.g obj
+      </literallayout>
+    </para>
+  </example>
+
+</refsection>
+
+<refsection xml:id="author"><title>AUTHOR</title><para>BRL-CAD Team</para></refsection>
+
+<refsection xml:id="bug_reports"><title>BUG REPORTS</title>
+
+  <para>
+    Reports of bugs or problems should be submitted via electronic
+    mail to <email>devs@brlcad.org</email>
+  </para>
+</refsection>
+</refentry>
+
+<!-- vim: set shiftwidth=2 : -->
+
